fixed bug on mobile

--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -121,8 +121,6 @@ hr {
 
 @media screen and (max-width: 800px) {
   body {
-    padding-top: 50px;
-
     .p-one {
       position: fixed;
       top: -700px;
